--- a/dashboard.html
+++ b/dashboard.html
@@ -20,28 +20,65 @@
           </button>
           <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
             <div class="offcanvas-header">
-              <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+                <strong><h1 class="nav-link text-white text-center" style="font-size: 30px;" href="#">Escolha Seu Curso</h1></strong>
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
-                </li>
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Dropdown
+                    Técnico Em Informática
                   </a>
                   <ul class="dropdown-menu dropdown-menu-dark">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li>
-                      <hr class="dropdown-divider">
-                    </li>
-                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                    <li><p class="dropdown-item text-white" href="#">Matutino</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIM1</a></li>
+                    <li><a class="dropdown-item" href="#">3TIM2</a></li>
+                    <li><a class="dropdown-item" href="#">3TIM3</a></li>
+                    <li><a class="dropdown-item" href="#">3TIM4</a></li>
+                    <hr class="dropdown-divider">
+                    <li><p class="dropdown-item text-white" href="#">Vespertino</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIV1</a></li>
+                    <li><a class="dropdown-item" href="#">3TIV2</a></li>
+                    <li><a class="dropdown-item" href="#">3TIV3</a></li>
+                    <li><a class="dropdown-item" href="#">3TIV4</a></li>
+                    <hr class="dropdown-divider">
+                    <li><p class="dropdown-item text-white" href="#">Noturno</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIN1</a></li>
+                    <li><a class="dropdown-item" href="#">3TIN2</a></li>
+                    <li><a class="dropdown-item" href="#">3TIN3</a></li>
+                    <li><a class="dropdown-item" href="#">3TIN4</a></li>
+                  </ul>
+                </li>
+              </ul>
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Curso 2
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-dark">
+                    <li><p class="dropdown-item text-white" href="#">Matutino</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIM1</a></li>
+                    <li><a class="dropdown-item" href="#">3TIM2</a></li>
+                    <li><a class="dropdown-item" href="#">3TIM3</a></li>
+                    <li><a class="dropdown-item" href="#">3TIM4</a></li>
+                    <hr class="dropdown-divider">
+                    <li><p class="dropdown-item text-white" href="#">Vespertino</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIV1</a></li>
+                    <li><a class="dropdown-item" href="#">3TIV2</a></li>
+                    <li><a class="dropdown-item" href="#">3TIV3</a></li>
+                    <li><a class="dropdown-item" href="#">3TIV4</a></li>
+                    <hr class="dropdown-divider">
+                    <li><p class="dropdown-item text-white" href="#">Noturno</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIN1</a></li>
+                    <li><a class="dropdown-item" href="#">3TIN2</a></li>
+                    <li><a class="dropdown-item" href="#">3TIN3</a></li>
+                    <li><a class="dropdown-item" href="#">3TIN4</a></li>
                   </ul>
                 </li>
               </ul>
