--- a/dashboard.html
+++ b/dashboard.html
@@ -23,6 +23,7 @@
                 <strong><h1 class="nav-link text-white text-center" style="font-size: 30px;" href="#">Escolha Seu Curso</h1></strong>
               <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
+            <!-----------------------------DIVISAO DOS CURSOS----------------------------------->
             <div class="offcanvas-body">
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item dropdown">
@@ -32,27 +33,31 @@
                   <ul class="dropdown-menu dropdown-menu-dark">
                     <li><p class="dropdown-item text-white" href="#">Matutino</p></li>
                     <hr class="dropdown-divider">
-                    <li><a class="dropdown-item" href="#">3TIM1</a></li>
-                    <li><a class="dropdown-item" href="#">3TIM2</a></li>
-                    <li><a class="dropdown-item" href="#">3TIM3</a></li>
-                    <li><a class="dropdown-item" href="#">3TIM4</a></li>
+                    <li><a class="dropdown-item" href="#">1TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIM</a></li>
                     <hr class="dropdown-divider">
                     <li><p class="dropdown-item text-white" href="#">Vespertino</p></li>
                     <hr class="dropdown-divider">
-                    <li><a class="dropdown-item" href="#">3TIV1</a></li>
-                    <li><a class="dropdown-item" href="#">3TIV2</a></li>
-                    <li><a class="dropdown-item" href="#">3TIV3</a></li>
-                    <li><a class="dropdown-item" href="#">3TIV4</a></li>
+                    <li><a class="dropdown-item" href="#">1TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIV</a></li>
                     <hr class="dropdown-divider">
                     <li><p class="dropdown-item text-white" href="#">Noturno</p></li>
                     <hr class="dropdown-divider">
-                    <li><a class="dropdown-item" href="#">3TIN1</a></li>
-                    <li><a class="dropdown-item" href="#">3TIN2</a></li>
-                    <li><a class="dropdown-item" href="#">3TIN3</a></li>
-                    <li><a class="dropdown-item" href="#">3TIN4</a></li>
+                    <li><a class="dropdown-item" href="#">1TIN</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIN</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIN</a></li>
                   </ul>
                 </li>
               </ul>
+              <!-----------------------------DIVISAO DOS CURSOS----------------------------------->
               <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -61,27 +66,131 @@
                   <ul class="dropdown-menu dropdown-menu-dark">
                     <li><p class="dropdown-item text-white" href="#">Matutino</p></li>
                     <hr class="dropdown-divider">
-                    <li><a class="dropdown-item" href="#">3TIM1</a></li>
-                    <li><a class="dropdown-item" href="#">3TIM2</a></li>
-                    <li><a class="dropdown-item" href="#">3TIM3</a></li>
-                    <li><a class="dropdown-item" href="#">3TIM4</a></li>
+                    <li><a class="dropdown-item" href="#">1TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIM</a></li>
                     <hr class="dropdown-divider">
                     <li><p class="dropdown-item text-white" href="#">Vespertino</p></li>
                     <hr class="dropdown-divider">
-                    <li><a class="dropdown-item" href="#">3TIV1</a></li>
-                    <li><a class="dropdown-item" href="#">3TIV2</a></li>
-                    <li><a class="dropdown-item" href="#">3TIV3</a></li>
-                    <li><a class="dropdown-item" href="#">3TIV4</a></li>
+                    <li><a class="dropdown-item" href="#">1TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIV</a></li>
                     <hr class="dropdown-divider">
                     <li><p class="dropdown-item text-white" href="#">Noturno</p></li>
                     <hr class="dropdown-divider">
-                    <li><a class="dropdown-item" href="#">3TIN1</a></li>
-                    <li><a class="dropdown-item" href="#">3TIN2</a></li>
-                    <li><a class="dropdown-item" href="#">3TIN3</a></li>
-                    <li><a class="dropdown-item" href="#">3TIN4</a></li>
+                    <li><a class="dropdown-item" href="#">1TIN</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIN</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIN</a></li>
                   </ul>
                 </li>
               </ul>
+              <!-----------------------------DIVISAO DOS CURSOS----------------------------------->
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Curso 3
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-dark">
+                    <li><p class="dropdown-item text-white" href="#">Matutino</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">1TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><p class="dropdown-item text-white" href="#">Vespertino</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">1TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><p class="dropdown-item text-white" href="#">Noturno</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">1TIN</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIN</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIN</a></li>
+                  </ul>
+                </li>
+              </ul>
+              <!-----------------------------DIVISAO DOS CURSOS----------------------------------->
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Curso 4
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-dark">
+                    <li><p class="dropdown-item text-white" href="#">Matutino</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">1TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><p class="dropdown-item text-white" href="#">Vespertino</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">1TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><p class="dropdown-item text-white" href="#">Noturno</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">1TIN</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIN</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIN</a></li>
+                  </ul>
+                </li>
+              </ul>
+              <!-----------------------------DIVISAO DOS CURSOS----------------------------------->
+              <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Curso 5
+                  </a>
+                  <ul class="dropdown-menu dropdown-menu-dark">
+                    <li><p class="dropdown-item text-white" href="#">Matutino</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">1TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIM</a></li>
+                    <hr class="dropdown-divider">
+                    <li><p class="dropdown-item text-white" href="#">Vespertino</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">1TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIV</a></li>
+                    <hr class="dropdown-divider">
+                    <li><p class="dropdown-item text-white" href="#">Noturno</p></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">1TIN</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">2TIN</a></li>
+                    <hr class="dropdown-divider">
+                    <li><a class="dropdown-item" href="#">3TIN</a></li>
+                  </ul>
+                </li>
+              </ul>
+              <!-----------------------------DIVISAO DOS CURSOS----------------------------------->
+
             </div>
           </div>
         </div>
